--- a/po/ar.po
+++ b/po/ar.po
@@ -8,20 +8,21 @@ msgstr ""
 "Project-Id-Version: LXTask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-01 14:52+0800\n"
-"PO-Revision-Date: 2009-01-25 14:38+0200\n"
-"Last-Translator: Ahmad Farghal <ahmad.farghal@gmail.com>\n"
+"PO-Revision-Date: 2009-12-21 11:15+0100\n"
+"Last-Translator: Ismaeel AL-zahrani <end-of-dream@hotmail.com>\n"
 "Language-Team: Arabic\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Pootle 1.1.0\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "إدارة العمليات الجارية"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "إدارة العملية"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:58
 msgid "Task Manager"
@@ -71,7 +72,7 @@ msgstr "_عرض"
 
 #: ../src/interface.c:85
 msgid "_Help"
-msgstr "م_ساعدة"
+msgstr "_مساعدة"
 
 #: ../src/interface.c:109
 msgid "cpu usage"
@@ -205,15 +206,15 @@ msgstr "مدير مهام خفيف لمشروع LXDE"
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "التفضيلات"
 
 #: ../src/interface.c:582
 msgid "General"
-msgstr ""
+msgstr "عامة"
 
 #: ../src/interface.c:583
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "معدل التحديث (ثانية):"
 
 #: ../src/utils.c:43
 msgid "Error"
