--- a/po/el.po
+++ b/po/el.po
@@ -8,21 +8,21 @@ msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-01 14:52+0800\n"
-"PO-Revision-Date: 2009-07-22 00:04+0200\n"
+"PO-Revision-Date: 2009-12-27 22:46+0100\n"
 "Last-Translator: George Vasilakos <forfolias@linuxteam.cs.teilar.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Pootle 1.1.0\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "Διαχείριση τρεχουσών διεργασιών"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Διαχειριστής διεργασιών"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:58
 msgid "Task Manager"
@@ -209,15 +209,15 @@ msgstr "Ελαφρύς διαχειριστής εργασιών για το pro
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "Προτιμήσεις"
 
 #: ../src/interface.c:582
 msgid "General"
-msgstr ""
+msgstr "Γενικά"
 
 #: ../src/interface.c:583
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Ρυθμός ανανέωσης (δευτερόλεπτα):"
 
 #: ../src/utils.c:43
 msgid "Error"
