--- a/po/da.po
+++ b/po/da.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.3.2svn-r02842\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-01 14:52+0800\n"
-"PO-Revision-Date: 2009-03-23 16:42+0100\n"
-"Last-Translator: charlie tyrrestrup <chalze06@gmail.com>\n"
+"PO-Revision-Date: 2009-12-30 10:34+0100\n"
+"Last-Translator: Vidar Jon Bauge <vidarjb@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -21,11 +21,11 @@ msgstr ""
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "Håndter kørende processer"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Procesbehandler"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:58
 msgid "Task Manager"
@@ -211,15 +211,15 @@ msgstr "Letvægts opgavebehandler for LXDE projektet"
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "Præferencer"
 
 #: ../src/interface.c:582
 msgid "General"
-msgstr ""
+msgstr "Generelt"
 
 #: ../src/interface.c:583
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Opdateringsfrekvens (sekunder)"
 
 #: ../src/utils.c:43
 msgid "Error"
