--- a/po/he.po
+++ b/po/he.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-01 14:52+0800\n"
-"PO-Revision-Date: 2009-11-14 08:48+0100\n"
-"Last-Translator: Yaron Shahrbani <sh.yaron@gmail.com>\n"
+"PO-Revision-Date: 2010-01-03 19:41+0100\n"
+"Last-Translator: ליאל פרידמן <lielft@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -189,7 +189,7 @@ msgstr ""
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:367
 msgid "translator-credits"
-msgstr "ירון שהרבני <sh.yaron@gmail.com>"
+msgstr "ירון שהרבני <sh.yaron@gmail.com>ליאל פרידמן <lielft@gmail.com>"
 
 #: ../src/interface.c:375
 msgid "LXTask"
