--- a/po/ms.po
+++ b/po/ms.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-11-01 14:52+0800\n"
+"POT-Creation-Date: 2010-01-12 01:14+0100\n"
 "PO-Revision-Date: 2009-06-09 02:57+0200\n"
 "Last-Translator: Payne Samad Loh <sploh77@yahoo.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -192,8 +192,8 @@ msgstr ""
 #: ../src/interface.c:367
 msgid "translator-credits"
 msgstr ""
-"罗森柄 Payne Samad Loh <sploh77@yahoo.com>\r\n"
-"Phyz <phyz2010@gmail.com>\r\n"
+"罗森柄 Payne Samad Loh <sploh77@yahoo.com>\n"
+"Phyz <phyz2010@gmail.com>\n"
 "Umarzuki Bin Mochlis Moktar <umarzuki@gmail.com>"
 
 #: ../src/interface.c:375
