--- a/po/hu.po
+++ b/po/hu.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LXTask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-12 01:14+0100\n"
-"PO-Revision-Date: 2009-05-25 16:22+0100\n"
+"PO-Revision-Date: 2010-01-17 18:10+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -20,13 +20,14 @@ msgstr ""
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "A futó folyamatok kezelése"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Folyamatkezelő"
 
-#: ../lxtask.desktop.in.h:3 ../src/interface.c:58
+#: ../lxtask.desktop.in.h:3
+#: ../src/interface.c:58
 msgid "Task Manager"
 msgstr "Feladatkezelő"
 
@@ -208,15 +209,15 @@ msgstr "Pehelysúlyú feladat-kezelő az LXDE projekthez"
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "Jellemzők"
 
 #: ../src/interface.c:582
 msgid "General"
-msgstr ""
+msgstr "Általános"
 
 #: ../src/interface.c:583
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Frissítési gyakoriság (másodpercek):"
 
 #: ../src/utils.c:43
 msgid "Error"
@@ -228,3 +229,4 @@ msgstr "Megerősít"
 
 #~ msgid "%0.0f %%"
 #~ msgstr "%0.0f %%"
+
