--- a/po/vi.po
+++ b/po/vi.po
@@ -3,30 +3,32 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-12 01:14+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2010-01-26 11:55+0200\n"
+"Last-Translator: Hiếu <scamemiv@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "Quản lý các tiến trình đang chạy"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Quản lý tiến trình"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:58
 msgid "Task Manager"
-msgstr ""
+msgstr "Quản lý tác vụ"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -35,186 +37,191 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Không thể gửi tín hiệu %d cho tác vụ với ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Không thể đặt ưu tiên %d cho tiến trình với ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Thực sự muốn tắt ngay tác vụ?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Thực sự muốn kết thúc tác vụ?"
 
 #: ../src/functions.c:144
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Bộ nhớ: %d MB trong %d MB đã sử dụng"
 
 #: ../src/functions.c:150
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Mức sử dụng CPU: %0.0f %%"
 
 #: ../src/interface.c:71
 msgid "_File"
-msgstr ""
+msgstr "_Tập tin"
 
 #: ../src/interface.c:79
 msgid "_View"
-msgstr ""
+msgstr "_Xem"
 
 #: ../src/interface.c:85
 msgid "_Help"
-msgstr ""
+msgstr "T_rợ giúp"
 
 #: ../src/interface.c:109
 msgid "cpu usage"
-msgstr ""
+msgstr "sử dụng cpu"
 
 #: ../src/interface.c:117
 msgid "memory usage"
-msgstr ""
+msgstr "sử dụng bộ nhớ"
 
 #: ../src/interface.c:145
 msgid "more details"
-msgstr ""
+msgstr "thêm chi tiết"
 
 #: ../src/interface.c:171
 msgid "Command"
-msgstr ""
+msgstr "Câu lệnh"
 
 #: ../src/interface.c:177
 msgid "User"
-msgstr ""
+msgstr "Người dùng"
 
 #: ../src/interface.c:186
 msgid "CPU%"
-msgstr ""
+msgstr "CPU%"
 
 #: ../src/interface.c:192
 msgid "RSS"
-msgstr ""
+msgstr "RSS"
 
 #: ../src/interface.c:198
 msgid "VM-Size"
-msgstr ""
+msgstr "Kích thước bộ nhớ ảo"
 
 #: ../src/interface.c:204
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
 #: ../src/interface.c:210
 msgid "State"
-msgstr ""
+msgstr "Trạng thái"
 
 #: ../src/interface.c:216
 msgid "Prio"
-msgstr ""
+msgstr "Độ ưu tiên"
 
 #: ../src/interface.c:222
 msgid "PPID"
-msgstr ""
+msgstr "PPID"
 
 #: ../src/interface.c:238
 msgid "Stop"
-msgstr ""
+msgstr "Dừng"
 
 #: ../src/interface.c:243
 msgid "Continue"
-msgstr ""
+msgstr "Tiếp tục"
 
 #: ../src/interface.c:248
 msgid "Term"
-msgstr ""
+msgstr "Tắt"
 
 #: ../src/interface.c:253
 msgid "Kill"
-msgstr ""
+msgstr "Tắt ngay"
 
 #: ../src/interface.c:258
 msgid "Priority"
-msgstr ""
+msgstr "Độ ưu tiên"
 
 #: ../src/interface.c:271
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:276
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:281
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:286
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:291
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:316
 msgid "Show user tasks"
-msgstr ""
+msgstr "Hiển thị tác vụ của người dùng"
 
 #: ../src/interface.c:321
 msgid "Show root tasks"
-msgstr ""
+msgstr "Hiện thị tác vụ của root"
 
 #: ../src/interface.c:326
 msgid "Show other tasks"
-msgstr ""
+msgstr "Hiển thị các tác vụ khác"
 
 #: ../src/interface.c:331
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "Xem các vùng nhớ đệm (cache) như là vùng trống"
 
 #: ../src/interface.c:362
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask dựa trên Bộ quản lý tác vụ Xfce4 bởi: \n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:367
 msgid "translator-credits"
-msgstr ""
+msgstr "nhóm Việt hoá: Duy-Hieu Bui <scamemiv@gmail.com>"
 
 #: ../src/interface.c:375
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:377
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Bản quyền (C) 2008 LXDE team"
 
 #: ../src/interface.c:378
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Chương trình quản lý tác vụ cho dự án LXDE"
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "Tùy chỉnh"
 
 #: ../src/interface.c:582
 msgid "General"
-msgstr ""
+msgstr "Tổng quát"
 
 #: ../src/interface.c:583
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Tốc độ làm tươi (giây):"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Lỗi"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Xác nhận"
