--- a/po/tr.po
+++ b/po/tr.po
@@ -3,30 +3,32 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-12 01:14+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2010-01-28 15:08+0200\n"
+"Last-Translator: Kılıç <kilickoken@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "Çalışan süreçleri yönet"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Süreç yönetici"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:58
 msgid "Task Manager"
-msgstr ""
+msgstr "Görev Yönetici"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -35,85 +37,88 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"%d kimlikli göreve %d uyarısı gönderilemedi\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "%d kimlikli göreve %d önceliği atanamadı"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Görevi gerçekten öldürmek istiyor musunuz?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Görevi gerçekten sonlandırmak istiyor musunuz?"
 
 #: ../src/functions.c:144
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Bellek: %d MB'ın %d MB'ı kullanıldı"
 
 #: ../src/functions.c:150
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "İşlemci kullanımı: %0.0f %%"
 
 #: ../src/interface.c:71
 msgid "_File"
-msgstr ""
+msgstr "_Dosya"
 
 #: ../src/interface.c:79
 msgid "_View"
-msgstr ""
+msgstr "_Görünüm"
 
 #: ../src/interface.c:85
 msgid "_Help"
-msgstr ""
+msgstr "_Yardım"
 
 #: ../src/interface.c:109
 msgid "cpu usage"
-msgstr ""
+msgstr "işlemci kullanımı"
 
 #: ../src/interface.c:117
 msgid "memory usage"
-msgstr ""
+msgstr "bellek kullanımı"
 
 #: ../src/interface.c:145
 msgid "more details"
-msgstr ""
+msgstr "daha fazla ayrıntı"
 
 #: ../src/interface.c:171
 msgid "Command"
-msgstr ""
+msgstr "Komut"
 
 #: ../src/interface.c:177
 msgid "User"
-msgstr ""
+msgstr "Kullanıcı"
 
 #: ../src/interface.c:186
 msgid "CPU%"
-msgstr ""
+msgstr "İşlemci%"
 
 #: ../src/interface.c:192
 msgid "RSS"
-msgstr ""
+msgstr "RSS"
 
 #: ../src/interface.c:198
 msgid "VM-Size"
-msgstr ""
+msgstr "VM-Boyut"
 
 #: ../src/interface.c:204
 msgid "PID"
-msgstr ""
+msgstr "SK"
 
 #: ../src/interface.c:210
 msgid "State"
-msgstr ""
+msgstr "Durum"
 
 #: ../src/interface.c:216
 msgid "Prio"
-msgstr ""
+msgstr "Öncelik"
 
 #: ../src/interface.c:222
 msgid "PPID"
