--- a/po/ru.po
+++ b/po/ru.po
@@ -9,13 +9,16 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-12 01:14+0100\n"
-"PO-Revision-Date: 2009-04-29 11:50+0200\n"
-"Last-Translator: Vitaly Pashkov <admin@fluda.net>\n"
+"PO-Revision-Date: 2010-02-04 17:13+0200\n"
+"Last-Translator: Alexander <kazancas@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Pootle 1.1.0\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -207,15 +210,16 @@ msgstr "Легкий диспетчер задач для проекта LXDE"
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "Настройки"
 
 #: ../src/interface.c:582
+#, fuzzy
 msgid "General"
-msgstr ""
+msgstr "Основные"
 
 #: ../src/interface.c:583
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Интервал обновления (секунд):"
 
 #: ../src/utils.c:43
 msgid "Error"
