--- a/po/bg.po
+++ b/po/bg.po
@@ -8,27 +8,28 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-12 01:14+0100\n"
-"PO-Revision-Date: 2009-10-09 15:12+0200\n"
-"Last-Translator: Rossen Karpuzov <gustav cointech net>\n"
-"Language-Team: Mandriva User Group - Bulgaria <mandriva-bg@googlegroups."
-"com>\n"
+"PO-Revision-Date: 2010-03-21 10:13+0200\n"
+"Last-Translator: Радослав Иванов <rec_ku@hotmail.com>\n"
+"Language-Team: "
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Bulgarian\n"
 "X-Poedit-Country: BULGARIA\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "Управлявай изпълняваните процеси"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Процесов мениджър"
 
-#: ../lxtask.desktop.in.h:3 ../src/interface.c:58
+#: ../lxtask.desktop.in.h:3
+#: ../src/interface.c:58
 msgid "Task Manager"
-msgstr "Мениджър на задачи"
+msgstr "Диспечер на задачи"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -37,15 +38,18 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Не може да се изпрати сигнала %d до задача ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Не може да се зададе приоритет %d на задача с ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr "Наистина ли щеубиете задачата?"
+msgstr "Наистина ли ще убиете задачата?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
@@ -59,7 +63,7 @@ msgstr "Памет: %d МБ от %d МБ използвана"
 #: ../src/functions.c:150
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "CPU натоварване: %0.0f %%"
 
 #: ../src/interface.c:71
 msgid "_File"
@@ -75,11 +79,11 @@ msgstr "_Помощ"
 
 #: ../src/interface.c:109
 msgid "cpu usage"
-msgstr "Натоварване на процесора"
+msgstr "натоварване на процесора"
 
 #: ../src/interface.c:117
 msgid "memory usage"
-msgstr "Използване на памет"
+msgstr "използвана памет"
 
 #: ../src/interface.c:145
 msgid "more details"
@@ -115,7 +119,7 @@ msgstr "Състояние"
 
 #: ../src/interface.c:216
 msgid "Prio"
-msgstr "Приор"
+msgstr "Прио"
 
 #: ../src/interface.c:222
 msgid "PPID"
@@ -131,7 +135,7 @@ msgstr "Продължи"
 
 #: ../src/interface.c:248
 msgid "Term"
-msgstr ""
+msgstr "Период"
 
 #: ../src/interface.c:253
 msgid "Kill"
@@ -182,11 +186,13 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask е извлечена от xfce4 Диспечер на задачите от:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:367
 msgid "translator-credits"
-msgstr ""
+msgstr "Радослав Иванов"
 
 #: ../src/interface.c:375
 msgid "LXTask"
@@ -195,23 +201,23 @@ msgstr "LXTask"
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:377
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright © 2008 LXDE"
 
 #: ../src/interface.c:378
 msgid "Lightweight task manager for LXDE project"
-msgstr "Lightweight мениджър на задачи за LXDE проект"
+msgstr "Диспечер на задачи за LXDE"
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "Предпочитания"
 
 #: ../src/interface.c:582
 msgid "General"
-msgstr ""
+msgstr "Основни"
 
 #: ../src/interface.c:583
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Честота на опресняване (Секунди):"
 
 #: ../src/utils.c:43
 msgid "Error"
@@ -220,3 +226,4 @@ msgstr "Грешка"
 #: ../src/utils.c:56
 msgid "Confirm"
 msgstr "Потвърждение"
+
