--- a/po/fo.po
+++ b/po/fo.po
@@ -3,18 +3,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-06 15:47+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2010-04-15 22:21+0200\n"
+"Last-Translator: Gunleif <gunleif@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: fo\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -22,11 +24,11 @@ msgstr ""
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Tilgongdar fyrisiting"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:58
 msgid "Task Manager"
-msgstr ""
+msgstr "Koyrslu fyrisiting"
 
 #: ../src/xfce-taskmanager-linux.c:385
 #, c-format
@@ -52,32 +54,32 @@ msgstr ""
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Minni: %d MB av %d MB nýtt"
 
 #: ../src/functions.c:157
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "CPU nýtsla: %0.0f %%"
 
 #: ../src/interface.c:71
 msgid "_File"
-msgstr ""
+msgstr "_Fíla"
 
 #: ../src/interface.c:79
 msgid "_View"
-msgstr ""
+msgstr "_Vís"
 
 #: ../src/interface.c:85
 msgid "_Help"
-msgstr ""
+msgstr "_Hjálp"
 
 #: ../src/interface.c:109
 msgid "cpu usage"
-msgstr ""
+msgstr "cpu nýtsla"
 
 #: ../src/interface.c:117
 msgid "memory usage"
-msgstr ""
+msgstr "minnisnýtsla"
 
 #: ../src/interface.c:145
 msgid "more details"
@@ -85,47 +87,47 @@ msgstr ""
 
 #: ../src/interface.c:171
 msgid "Command"
-msgstr ""
+msgstr "Stýriboð"
 
 #: ../src/interface.c:177
 msgid "User"
-msgstr ""
+msgstr "Brúkari"
 
 #: ../src/interface.c:186
 msgid "CPU%"
-msgstr ""
+msgstr "CPU%"
 
 #: ../src/interface.c:192
 msgid "RSS"
-msgstr ""
+msgstr "RSS"
 
 #: ../src/interface.c:198
 msgid "VM-Size"
-msgstr ""
+msgstr "VM-stødd"
 
 #: ../src/interface.c:204
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
 #: ../src/interface.c:210
 msgid "State"
-msgstr ""
+msgstr "Støða"
 
 #: ../src/interface.c:216
 msgid "Prio"
-msgstr ""
+msgstr "Prio"
 
 #: ../src/interface.c:222
 msgid "PPID"
-msgstr ""
+msgstr "PPID"
 
 #: ../src/interface.c:238
 msgid "Stop"
-msgstr ""
+msgstr "Steðga"
 
 #: ../src/interface.c:243
 msgid "Continue"
-msgstr ""
+msgstr "Halt fram"
 
 #: ../src/interface.c:248
 msgid "Term"
@@ -133,35 +135,35 @@ msgstr ""
 
 #: ../src/interface.c:253
 msgid "Kill"
-msgstr ""
+msgstr "Drep"
 
 #: ../src/interface.c:258
 msgid "Priority"
-msgstr ""
+msgstr "Raðfesti"
 
 #: ../src/interface.c:271
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:276
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:281
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:286
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:291
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:316
 msgid "Show user tasks"
-msgstr ""
+msgstr "Vís brúkara koyrslur"
 
 #: ../src/interface.c:321
 msgid "Show root tasks"
@@ -173,48 +175,50 @@ msgstr ""
 
 #: ../src/interface.c:331
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "Vís minnið nýtt av kovanum sum verandi tøkt "
 
 #: ../src/interface.c:362
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask hevur sín uppruna úr Xfce4 Task Manager av:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:367
 msgid "translator-credits"
-msgstr ""
+msgstr "Gunleif Joensen"
 
 #: ../src/interface.c:375
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:377
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Upphavsrætt (C) 2008 LXDE-liðið"
 
 #: ../src/interface.c:378
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Lættvekts koyrlsu fyrisiting fyri LXDE verkætlaninna"
 
 #: ../src/interface.c:587
 msgid "Preferences"
-msgstr ""
+msgstr "Sertokkar"
 
 #: ../src/interface.c:591
 msgid "General"
-msgstr ""
+msgstr "Alment"
 
 #: ../src/interface.c:592
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Afturkomuferð (sekund):"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Brek"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Vátta"
