--- a/po/fa.po
+++ b/po/fa.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-06 15:47+0200\n"
-"PO-Revision-Date: 2010-01-25 19:56+0200\n"
+"PO-Revision-Date: 2010-07-06 12:01+0200\n"
 "Last-Translator: Hamidreza <n3gb0y@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: fa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fa\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -32,7 +32,6 @@ msgstr "مدیر وظیفه"
 
 #: ../src/xfce-taskmanager-linux.c:385
 #, c-format
-#, fuzzy
 msgid ""
 "Couldn't send signal %d to the task with ID %d\n"
 "\n"
@@ -67,15 +66,15 @@ msgstr "استفاده از پردازنده : %0.0f %%"
 
 #: ../src/interface.c:71
 msgid "_File"
-msgstr "ـ پرونده"
+msgstr "_پرونده"
 
 #: ../src/interface.c:79
 msgid "_View"
-msgstr "ـمشاهده"
+msgstr "_مشاهده"
 
 #: ../src/interface.c:85
 msgid "_Help"
-msgstr "ـکمک"
+msgstr "_کمک"
 
 #: ../src/interface.c:109
 msgid "cpu usage"
@@ -103,13 +102,12 @@ msgstr "واحد پردازشگر مرکزی%"
 
 #: ../src/interface.c:192
 msgid "RSS"
-msgstr "آر اس اس"
+msgstr "آر‌اس‌اس"
 
 # virtual memory size
 #: ../src/interface.c:198
-#, fuzzy
 msgid "VM-Size"
-msgstr "اندازه ی حافظه ی مجازی"
+msgstr "میزان حافظه ی مجازی"
 
 #: ../src/interface.c:204
 msgid "PID"
@@ -121,15 +119,14 @@ msgstr "چگونگی"
 
 # priority
 #: ../src/interface.c:216
-#, fuzzy
 msgid "Prio"
 msgstr "اولویت"
 
 # Definition: PPID: the processes Parent PID, the creator of the process. 
+# Definition: PPID: the processes Parent PID, the creator of the process.
 #: ../src/interface.c:222
-#, fuzzy
 msgid "PPID"
-msgstr "مشخصه ی سرپرست برنامه"
+msgstr "سرپرست پروسه"
 
 #: ../src/interface.c:238
 msgid "Stop"
@@ -140,7 +137,6 @@ msgid "Continue"
 msgstr "ادامه"
 
 #: ../src/interface.c:248
-#, fuzzy
 msgid "Term"
 msgstr "دوره"
 
@@ -154,23 +150,23 @@ msgstr "اولویت"
 
 #: ../src/interface.c:271
 msgid "  -10"
-msgstr "-۱۰"
+msgstr "  -10"
 
 #: ../src/interface.c:276
 msgid "  -5"
-msgstr "-۵"
+msgstr "  -5"
 
 #: ../src/interface.c:281
 msgid "    0"
-msgstr "۰"
+msgstr "    0"
 
 #: ../src/interface.c:286
 msgid "   5"
-msgstr "۵"
+msgstr "   5"
 
 #: ../src/interface.c:291
 msgid "   10"
-msgstr "۱۰"
+msgstr "   10"
 
 #: ../src/interface.c:316
 msgid "Show user tasks"
@@ -198,18 +194,17 @@ msgstr ""
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:367
-#, fuzzy
 msgid "translator-credits"
-msgstr "اعتبارات-مترجم"
+msgstr "مترجم ها"
 
 #: ../src/interface.c:375
 msgid "LXTask"
-msgstr "LXTask"
+msgstr "ال‌ایکس‌تسک"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:377
 msgid "Copyright (C) 2008 LXDE team"
-msgstr "حق نشر (C) ۲۰۰۸ تیم LXDE"
+msgstr "حق نشر (C) 2008 تیم LXDE"
 
 #: ../src/interface.c:378
 msgid "Lightweight task manager for LXDE project"
