--- a/po/lt.po
+++ b/po/lt.po
@@ -8,13 +8,16 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-06 15:47+0200\n"
-"PO-Revision-Date: 2009-11-07 13:48+0100\n"
-"Last-Translator: Julius Vitkauskas <zadintuvas@gmail.com>\n"
+"PO-Revision-Date: 2011-01-04 23:20+0200\n"
+"Last-Translator: Julius <zadintuvas@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Pootle 1.1.0\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
+"100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.0.5\n"
 "X-Language: lt_LT\n"
 
 #: ../lxtask.desktop.in.h:1
@@ -85,7 +88,7 @@ msgstr "atminties naudojimas"
 
 #: ../src/interface.c:145
 msgid "more details"
-msgstr "Daugiau detalių"
+msgstr "daugiau detalių"
 
 #: ../src/interface.c:171
 msgid "Command"
